CREATE TABLE public.account ( id text NOT NULL, accountId text NOT NULL, providerId text NOT NULL, userId text NOT NULL, accessToken text, refreshToken text, idToken text, accessTokenExpiresAt timestamp with time zone, refreshTokenExpiresAt timestamp with time zone, scope text, password text, createdAt timestamp with time zone DEFAULT CURRENT_TIMESTAMP NOT NULL, updatedAt timestamp with time zone NOT NULL, PRIMARY KEY (id) ); CREATE TABLE public.alembic_version ( version_num character varying(32) NOT NULL, PRIMARY KEY (version_num) ); CREATE TABLE public.attempt_responses ( id uuid DEFAULT gen_random_uuid() NOT NULL, attempt_id uuid NOT NULL, question_id uuid NOT NULL, selected_option_ids jsonb DEFAULT '[]'::jsonb NOT NULL, is_correct boolean, marks_awarded numeric(5,2), time_spent_s integer, answered_at timestamp without time zone DEFAULT now(), PRIMARY KEY (id) ); CREATE TABLE public.exams ( id uuid DEFAULT gen_random_uuid() NOT NULL, name character varying(50) NOT NULL, description text, created_at timestamp without time zone DEFAULT now(), PRIMARY KEY (id) ); CREATE TABLE public.invitation ( id text NOT NULL, organizationId text NOT NULL, email text NOT NULL, role text, status text NOT NULL, expiresAt timestamp with time zone NOT NULL, createdAt timestamp with time zone DEFAULT CURRENT_TIMESTAMP NOT NULL, inviterId text NOT NULL, PRIMARY KEY (id) ); CREATE TABLE public.jwks ( id text NOT NULL, publicKey text NOT NULL, privateKey text NOT NULL, createdAt timestamp with time zone NOT NULL, expiresAt timestamp with time zone, PRIMARY KEY (id) ); CREATE TABLE public.media_assets ( id uuid DEFAULT gen_random_uuid() NOT NULL, storage_url text NOT NULL, media_type character varying(20) NOT NULL, alt_text text, width integer, height integer, file_size integer, uploaded_by uuid, created_at timestamp without time zone DEFAULT now(), PRIMARY KEY (id) ); CREATE TABLE public.member ( id text NOT NULL, organizationId text NOT NULL, userId text NOT NULL, role text NOT NULL, createdAt timestamp with time zone NOT NULL, PRIMARY KEY (id) ); CREATE TABLE public.organization ( id text NOT NULL, name text NOT NULL, slug text NOT NULL, logo text, createdAt timestamp with time zone NOT NULL, metadata text, PRIMARY KEY (id) ); CREATE TABLE public.question_options ( id uuid DEFAULT gen_random_uuid() NOT NULL, question_id uuid NOT NULL, option_key character(1) NOT NULL, body jsonb NOT NULL, is_correct boolean DEFAULT false NOT NULL, display_order smallint NOT NULL, PRIMARY KEY (id) ); CREATE TABLE public.questions ( id uuid DEFAULT gen_random_uuid() NOT NULL, subject_id uuid NOT NULL, topic_id uuid, difficulty smallint NOT NULL, question_type character varying(20) DEFAULT 'mcq'::character varying NOT NULL, body jsonb NOT NULL, hint jsonb, explanation jsonb, tags jsonb DEFAULT '[]'::jsonb, source character varying(200), is_verified boolean DEFAULT false, created_by uuid, created_at timestamp without time zone DEFAULT now(), updated_at timestamp without time zone DEFAULT now(), PRIMARY KEY (id) ); CREATE TABLE public.session ( id text NOT NULL, expiresAt timestamp with time zone NOT NULL, token text NOT NULL, createdAt timestamp with time zone DEFAULT CURRENT_TIMESTAMP NOT NULL, updatedAt timestamp with time zone NOT NULL, ipAddress text, userAgent text, userId text NOT NULL, impersonatedBy text, activeOrganizationId text, PRIMARY KEY (id) ); CREATE TABLE public.subjects ( id uuid DEFAULT gen_random_uuid() NOT NULL, exam_id uuid, name character varying(50) NOT NULL, description text, created_at timestamp without time zone DEFAULT now(), PRIMARY KEY (id) ); CREATE TABLE public.test_attempts ( id uuid DEFAULT gen_random_uuid() NOT NULL, test_id uuid NOT NULL, user_id text NOT NULL, status character varying(20) DEFAULT 'in_progress'::character varying NOT NULL, started_at timestamp without time zone DEFAULT now() NOT NULL, submitted_at timestamp without time zone, score numeric(7,2), time_taken_s integer, PRIMARY KEY (id) ); CREATE TABLE public.test_questions ( id uuid DEFAULT gen_random_uuid() NOT NULL, test_id uuid NOT NULL, question_id uuid NOT NULL, display_order smallint NOT NULL, marks smallint NOT NULL, negative_marks numeric(3,1) NOT NULL, PRIMARY KEY (id) ); CREATE TABLE public.tests ( id uuid DEFAULT gen_random_uuid() NOT NULL, exam_id uuid NOT NULL, user_id text, title character varying(255) NOT NULL, duration_mins integer, passing_score integer, is_published boolean DEFAULT false NOT NULL, generation_mode character varying(20) NOT NULL, random_config jsonb, created_at timestamp without time zone DEFAULT now(), PRIMARY KEY (id) ); CREATE TABLE public.topics ( id uuid DEFAULT gen_random_uuid() NOT NULL, subject_id uuid NOT NULL, name character varying(100) NOT NULL, description text, created_at timestamp without time zone DEFAULT now(), PRIMARY KEY (id) ); CREATE TABLE public.user ( id text NOT NULL, name text NOT NULL, email text NOT NULL, emailVerified boolean NOT NULL, image text, createdAt timestamp with time zone DEFAULT CURRENT_TIMESTAMP NOT NULL, updatedAt timestamp with time zone DEFAULT CURRENT_TIMESTAMP NOT NULL, role text, banned boolean, banReason text, banExpires timestamp with time zone, PRIMARY KEY (id) ); CREATE TABLE public.user_exams ( id uuid DEFAULT gen_random_uuid() NOT NULL, user_id text NOT NULL, exam_id uuid NOT NULL, enrolled_at bigint, last_active_at bigint, updated_at bigint, is_active boolean DEFAULT false NOT NULL, PRIMARY KEY (id) ); CREATE TABLE public.verification ( id text NOT NULL, identifier text NOT NULL, value text NOT NULL, expiresAt timestamp with time zone NOT NULL, createdAt timestamp with time zone DEFAULT CURRENT_TIMESTAMP NOT NULL, updatedAt timestamp with time zone DEFAULT CURRENT_TIMESTAMP NOT NULL, PRIMARY KEY (id) ); ALTER TABLE public.account ADD CONSTRAINT account_userId_fkey FOREIGN KEY (userId) REFERENCES public.user (id); ALTER TABLE public.attempt_responses ADD CONSTRAINT attempt_responses_attempt_id_fkey FOREIGN KEY (attempt_id) REFERENCES public.test_attempts (id); ALTER TABLE public.attempt_responses ADD CONSTRAINT attempt_responses_question_id_fkey FOREIGN KEY (question_id) REFERENCES public.questions (id); ALTER TABLE public.invitation ADD CONSTRAINT invitation_inviterId_fkey FOREIGN KEY (inviterId) REFERENCES public.user (id); ALTER TABLE public.invitation ADD CONSTRAINT invitation_organizationId_fkey FOREIGN KEY (organizationId) REFERENCES public.organization (id); ALTER TABLE public.member ADD CONSTRAINT member_organizationId_fkey FOREIGN KEY (organizationId) REFERENCES public.organization (id); ALTER TABLE public.member ADD CONSTRAINT member_userId_fkey FOREIGN KEY (userId) REFERENCES public.user (id); ALTER TABLE public.question_options ADD CONSTRAINT question_options_question_id_questions_id_fk FOREIGN KEY (question_id) REFERENCES public.questions (id); ALTER TABLE public.questions ADD CONSTRAINT questions_subject_id_subjects_id_fk FOREIGN KEY (subject_id) REFERENCES public.subjects (id); ALTER TABLE public.questions ADD CONSTRAINT questions_topic_id_topics_id_fk FOREIGN KEY (topic_id) REFERENCES public.topics (id); ALTER TABLE public.session ADD CONSTRAINT session_userId_fkey FOREIGN KEY (userId) REFERENCES public.user (id); ALTER TABLE public.subjects ADD CONSTRAINT subjects_exam_id_exams_id_fk FOREIGN KEY (exam_id) REFERENCES public.exams (id); ALTER TABLE public.test_attempts ADD CONSTRAINT test_attempts_test_id_fkey FOREIGN KEY (test_id) REFERENCES public.tests (id); ALTER TABLE public.test_questions ADD CONSTRAINT test_questions_question_id_fkey FOREIGN KEY (question_id) REFERENCES public.questions (id); ALTER TABLE public.test_questions ADD CONSTRAINT test_questions_test_id_fkey FOREIGN KEY (test_id) REFERENCES public.tests (id); ALTER TABLE public.tests ADD CONSTRAINT tests_exam_id_fkey FOREIGN KEY (exam_id) REFERENCES public.exams (id); ALTER TABLE public.topics ADD CONSTRAINT topics_subject_id_subjects_id_fk FOREIGN KEY (subject_id) REFERENCES public.subjects (id); ALTER TABLE public.user_exams ADD CONSTRAINT user_exams_exam_id_fkey FOREIGN KEY (exam_id) REFERENCES public.exams (id);