Table public.user {
  id text [pk, not null]
  name text [not null]
  email text [not null, unique]
  email_verified bool [not null, default: `false`]
  image text [null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  Indexes {
    email [name: "user_email_unique", unique]
  }
}
Table public.account {
  id text [pk, not null]
  account_id text [not null]
  provider_id text [not null]
  user_id text [not null]
  access_token text [null]
  refresh_token text [null]
  id_token text [null]
  access_token_expires_at timestamp [null]
  refresh_token_expires_at timestamp [null]
  scope text [null]
  password text [null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]
  Indexes {
    user_id [name: "account_userId_idx"]
  }
}
Table public.html_contents {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  html text [not null]
  parent_html_id uuid [null]
  created_at timestamptz [not null, default: `now()`]
}
Table public.projects {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  user_id text [not null]
  name text [not null]
  description text [null]
  prompt text [null]
  is_archived bool [null, default: `false`]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  Indexes {
    created_at [name: "idx_projects_created_at"]
    user_id [name: "idx_projects_user_id"]
  }
}
Table public.screen_versions {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  screen_id uuid [not null]
  version_number int4 [not null]
  user_prompt text [not null]
  ai_prompt text [null]
  html_content_id uuid [not null]
  created_by text [null]
  is_current bool [null, default: `false`]
  parent_version_id uuid [null]
  created_at timestamptz [not null, default: `now()`]
  Indexes {
    created_at [name: "idx_screen_versions_created_at"]
    is_current [name: "idx_screen_versions_is_current"]
    parent_version_id [name: "idx_screen_versions_parent_id"]
    screen_id [name: "idx_screen_versions_screen_id"]
  }
}
Table public.screens {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  project_id uuid [not null]
  name text [not null]
  order_index int4 [null, default: `0`]
  is_active bool [null, default: `true`]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  Indexes {
    order_index [name: "idx_screens_order_index"]
    project_id [name: "idx_screens_project_id"]
  }
}
Table public.session {
  id text [pk, not null]
  expires_at timestamp [not null]
  token text [not null, unique]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]
  ip_address text [null]
  user_agent text [null]
  user_id text [not null]
  Indexes {
    token [name: "session_token_unique", unique]
    user_id [name: "session_userId_idx"]
  }
}
Table public.verification {
  id text [pk, not null]
  identifier text [not null]
  value text [not null]
  expires_at timestamp [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  Indexes {
    identifier [name: "verification_identifier_idx"]
  }
}
Ref account_user_id_user_id_fk: public.account.user_id > public."user".id
Ref projects_user_id_user_id_fk: public.projects.user_id > public."user".id
Ref screen_versions_created_by_user_id_fk: public.screen_versions.created_by > public."user".id
Ref screen_versions_html_content_id_html_contents_id_fk: public.screen_versions.html_content_id > public.html_contents.id
Ref screen_versions_screen_id_screens_id_fk: public.screen_versions.screen_id > public.screens.id
Ref screens_project_id_projects_id_fk: public.screens.project_id > public.projects.id
Ref session_user_id_user_id_fk: public.session.user_id > public."user".id
